# hicd-api

./: .gitignore  API-CONCLUIDA.md  API-README.md  CACHE-IMPLEMENTATION.md  CLAUDE.md  DOCUMENTACAO_ATUALIZADA.md  PARSER_AJUSTADO_README.md  README-REFACTORED.md  README.md  REFACTORING-SUMMARY.md  RESULTADO_IMPLEMENTACAO.md  RESUMO_IMPLEMENTACAO_MODELOS.md  RESUMO_PRESCRICOES.md  api-server-simple.js  api-server.js  config.js  crawler-completo.js  crawler.py  debug-clinicas.html  exemplo-api.js  exemplo-clinicas.js  exemplo-completo-exames.js  exemplo-siglas-valores.js  exemplo-urls-impressao.js  exemplo-uso-refatorado.js  exemplo_prescricoes.js  exemplos.js  hicd-crawler-refactored.js  hicd-crawler.js  index.js  login_page.html  package.json  payload.js  server.js  setup.js  test-clinicas-console.js  test-crawler.js  test-frontend.html  test-modules.js  test_model_prescricao.js  (+20 more)
.github/: copilot-instructions.md
api/: EXEMPLO_USO_API.md  docs.html  server.js  shared-crawler.js  swagger.js
debug/: debug-evolucoes-40577-2025-08-06T02-30-07-815Z.html  debug-paciente-cadastro-40577-2025-08-06T02-20-24-125Z.html  debug-paciente-cadastro-40577-2025-08-06T02-30-06-688Z.html
docs/: PRD.md  PRESCRICOES_README.md  deploy-lovable.md  modelo-exames-estruturado.md  parser-clinicas-ajuste.md  parser-evolucoes-ajuste.md
frontend/: CORRECAO-LOG-ERROR.md  DEBUG-PASSO2.md  DEBUG-STATUS.md  README-PASSAGEM-PLANTAO.md  README.md  debug-navigation.html  debug-plantao.html  icon-generator.html  index.html  (+9 more)
utiped/: README.md  pyproject.toml
utiped/src/utiped/: crew.py  main.py
(+88 files in other folders)
