[project]
name = "utiped"
version = "0.1.0"
description = "utiped using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
utiped = "utiped.main:run"
run_crew = "utiped.main:run"
train = "utiped.main:train"
replay = "utiped.main:replay"
test = "utiped.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
